--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,6 +4,7 @@
 
 /* Componets */
 @import "components/status-bar.css";
+@import "components/navigation-bar.css";
 
 /* Screens */
 @import "screens/login.css";
