--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,13 +7,28 @@
 @import "components/navigation-bar.css";
 @import "components/screen-header.css";
 @import "components/user-components.css";
+@import "components/badge.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
+@import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chat.css";
+@import "no-mobile.css";
 
 body {
   color: #2e363e;
   font-family: "Open Sans", sans-serif;
   padding-top: 30px;
+  font-weight: 600;
+}
+
+.main-screen {
+  padding: var(--horizontal-space);
+}
+
+.up {
+  padding-top: 0px;
 }
