--- a/css/components/navigation-bar.css
+++ b/css/components/navigation-bar.css
@@ -16,17 +16,11 @@
 .nav__btn {
   color: #2e3632;
   position: relative;
+  transform: translateY(100px);
+  animation: nav 0.7s ease-in-out forwards;
 }
 
 .nav__unread-chat {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: tomato;
-  color: white;
-  width: 30px;
-  height: 30px;
-  border-radius: 15px;
   position: absolute;
   left: 20px;
   bottom: 12px;
@@ -43,4 +37,24 @@
   position: absolute;
   left: 30px;
   bottom: 28px;
+}
+
+@keyframes nav {
+  from {
+    transform: translateY(100px);
+  }
+
+  to {
+    transform: none;
+  }
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.nav__btn:nth-child(4) {
+  animation-delay: 0.3s;
 }
