--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -10,6 +10,7 @@
   padding: 10px 0px;
   opacity: 0.9;
   margin-bottom: 10px;
+  margin-top: -15px;
 }
 
 #friends-display-link i {
@@ -28,4 +29,29 @@
 
 .friends-screen {
   padding: 0px var(--horizontal-space);
+}
+
+#splash-screen {
+  background-color: var(--yellow);
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 132px;
+  animation: splash 0.4s ease-in-out forwards;
+  animation-delay: 1s;
+}
+
+@keyframes splash {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
