--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -1,15 +1,25 @@
-.welcome-header {
-  margin: 90px 0px;
+.the-box {
+  background: #191919;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 50px 50px 30px 50px;
   text-align: center;
+  width: 300px;
+}
+
+.welcome-header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 30px;
 }
 
 .welcome-header__title {
   margin-bottom: 20px;
-  font-size: 25px;
-  font-weight: 600;
+  font-size: 30px;
+  font-weight: 500;
 }
 
 .welcome-header__text {
@@ -20,7 +30,7 @@
 #login-form {
   display: flex;
   flex-direction: column;
-  margin: 0px 30px;
+  align-items: center;
 }
 
 #login-form input {
@@ -28,26 +38,26 @@
   padding: 15px;
   font-size: 18px;
   margin-bottom: 25px;
+  background: #191919;
+  border-radius: 30px;
+  width: 200px;
+  border: 2px solid #2980b9;
+  transition: 0.3s ease-in-out;
+  text-align: center;
+  color: #ecf0f1;
 }
 
-#login-form input:not([type="submit"]) {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  transition: border-color 0.3s ease-in-out;
-}
-
-#login-form input::placeholder {
-  border-color: rgba(0, 0, 0, 0.4);
-}
-
-#login-form input:focus {
-  border-color: var(--yellow);
+#login-form input[type="text"]:focus,
+#login-form input[type="password"]:focus {
+  border-color: #16a085;
+  width: 300px;
+  transition: 0.3s ease-in-out;
 }
 
 #login-form input[type="submit"] {
-  background-color: var(--yellow);
+  border-color: #16a085;
   cursor: pointer;
-  padding: 20px 0px;
-  border-radius: 5px;
+  width: 150px;
 }
 
 #login-form a {
