--- a/css/components/navigation-bar.css
+++ b/css/components/navigation-bar.css
@@ -3,7 +3,7 @@
   bottom: 0px;
   width: 100%;
   box-sizing: border-box;
-  background-color: #f9f9fa;
+  background-color: #252525;
   padding: 20px 50px;
   border-top: 1px solid rgba(121, 121, 121, 0.3);
 }
@@ -11,10 +11,11 @@
 .nav__list {
   display: flex;
   justify-content: space-between;
+  font-size: 13px;
 }
 
 .nav__btn {
-  color: #2e3632;
+  color: #ecf0f1;
   position: relative;
   transform: translateY(100px);
   animation: nav 0.7s ease-in-out forwards;
@@ -35,8 +36,8 @@
   height: 5px;
   border-radius: 2.5px;
   position: absolute;
-  left: 30px;
-  bottom: 28px;
+  left: 25px;
+  bottom: 23px;
 }
 
 @keyframes nav {
