--- a/css/no-mobile.css
+++ b/css/no-mobile.css
@@ -2,9 +2,10 @@
   position: absolute;
   z-index: 99;
   height: 100vh;
-  background-color: #34495e;
+  background-color: #191919;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 32px;
@@ -12,7 +13,33 @@
   top: 0;
 }
 
-@media screen and (max-width: 800px) {
+.logo {
+  margin-bottom: 30px;
+  text-shadow: 0 0 50px #2980b9, 0 0 100px #2980b9, 0 0 150px #2980b9,
+    0 0 200px #2980b9, 0 0 250px #2980b9;
+  animation: logo 2s ease-in infinite;
+}
+
+@keyframes logo {
+  0% {
+    text-shadow: 0 0 50px #2980b9, 0 0 100px #2980b9, 0 0 150px #2980b9,
+      0 0 200px #2980b9, 0 0 250px #2980b9;
+  }
+  50% {
+    text-shadow: 0 0 10px #2980b9, 0 0 20px #2980b9, 0 0 30px #2980b9,
+      0 0 40px #2980b9, 0 0 50px #2980b9;
+  }
+  100% {
+    text-shadow: 0 0 50px #2980b9, 0 0 100px #2980b9, 0 0 150px #2980b9,
+      0 0 200px #2980b9, 0 0 250px #2980b9;
+  }
+}
+
+#no-mobile span {
+  font-size: 25px;
+}
+
+@media screen and (max-width: 600px) {
   #no-mobile {
     display: none;
   }
