--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -4,13 +4,13 @@
   text-align: center;
   align-items: center;
   width: 100%;
-  background-color: #191919;
-  font-size: 18px;
+  background-color: #2c3e50;
+  font-size: 14px;
   font-weight: 600;
-  padding: 10px 0px;
+  padding: 5px 0px;
   opacity: 0.9;
   margin-bottom: 10px;
-  margin-top: -15px;
+  margin-top: 10px;
 }
 
 #friends-display-link i {
@@ -21,8 +21,8 @@
 .friends-screen__channel-header {
   border-top: 1px solid rgba(121, 121, 121, 0.3);
   opacity: 0.6;
-  font-weight: 600;
-  padding: 10px;
+  font-weight: 500;
+  padding: 10px 0;
   display: flex;
   justify-content: space-between;
 }
@@ -79,7 +79,7 @@
     margin-bottom: -40px;
   }
   30% {
-    letter-spacing: 25px;
+    letter-spacing: 15px;
     margin-bottom: -40px;
   }
   85% {
