--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -138,6 +138,7 @@
   box-sizing: border-box;
   transition: all 0.3s ease-in-out;
   background: #191919;
+  color: #ecf0f1;
 }
 
 .reply__column:last-child > i,
