--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,6 +1,6 @@
 .find-icons {
   display: flex;
-  height: 120px;
+  height: 100px;
 }
 
 .find-icons__icon {
@@ -11,46 +11,46 @@
 }
 
 .find-icons i {
-  font-size: 40px;
+  font-size: 35px;
 }
 
 .find-icons span {
-  margin: auto;
+  margin: 20px 0;
   text-align: center;
-  font-size: 20px;
+  font-size: 13px;
 }
 
 .recommended-friends {
-  padding: 25px 0;
+  padding: 15px 0;
   border-top: 1px solid rgb(0, 0, 0, 0.3);
   border-bottom: 1px solid rgb(0, 0, 0, 0.3);
 }
 
 .recommended-friends__title {
-  font-size: 18px;
+  font-size: 15px;
   opacity: 0.5;
 }
 
 .recommended-friends__text {
   text-align: center;
   margin: 100px 0;
-  font-size: 20px;
+  font-size: 17px;
   opacity: 0.5;
 }
 
 .open-chat__title {
   display: flex;
   justify-content: space-between;
-  padding-top: 25px;
-  margin-bottom: 25px;
+  padding-top: 20px;
+  margin-bottom: 20px;
 }
 
 .open-chat__title span:first-child {
-  font-size: 18px;
+  font-size: 15px;
   opacity: 0.7;
 }
 .open-chat__title span:last-child {
-  font-size: 18px;
+  font-size: 15px;
   opacity: 0.5;
 }
 
@@ -63,18 +63,18 @@
 }
 
 .open-post__title {
-  font-size: 25px;
+  font-size: 18px;
   margin-bottom: 7px;
 }
 
 .open-post__hashtag {
-  font-size: 18px;
+  font-size: 15px;
   opacity: 0.5;
   margin-bottom: 5px;
 }
 
 .open-post__members {
-  font-size: 15px;
+  font-size: 12px;
   opacity: 0.5;
   display: flex;
 }
@@ -84,6 +84,7 @@
   height: 15px;
   border-radius: 50%;
   margin-right: 5px;
+  opacity: 1;
 }
 
 .open-post__members .divider {
@@ -101,8 +102,8 @@
 }
 
 .open-post__photo img {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   border-radius: 10px;
 }
 
@@ -114,9 +115,9 @@
   display: flex;
   align-items: center;
   position: absolute;
-  bottom: 10px;
-  right: 10px;
-  font-size: 14px;
+  bottom: 5px;
+  right: 5px;
+  font-size: 8px;
 }
 
 .open-post__heart-count span {
